--- a/SW.CEMENTERIO/SW.CEMENTERIO/SW.CEMENTERIO.csproj
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/SW.CEMENTERIO.csproj
@@ -5,9 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.18.0" />
+    <PackageReference Include="EPPlus" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="SpreadsheetLight" Version="3.5.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
@@ -16,6 +19,14 @@
     <Reference Include="log4net">
       <HintPath>C:\Users\Xside\Desktop\Generador\Generador\log4net.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\assets\Plantillas\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\assets\Plantillas\PLANTILLA_PABELLON_NICHOS.xlsx" />
   </ItemGroup>
 
 </Project>
