--- a/SW.CEMENTERIO/SW.CEMENTERIO/SW.CEMENTERIO.csproj
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/SW.CEMENTERIO.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="6.0.8" />
+    <PackageReference Include="log4net" Version="2.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
