--- a/SW.CEMENTERIO/SW.CEMENTERIO/SW.CEMENTERIO.csproj
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/SW.CEMENTERIO.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="6.0.8" />
+    <PackageReference Include="GoogleMaps.LocationServices" Version="1.2.0.2" />
+    <PackageReference Include="GoogleMapsApi" Version="1.2.1" />
     <PackageReference Include="log4net" Version="2.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
